--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,7 @@
         method: 'DELETE',
         dataType: 'json', // 要求服务器回传 json
        success: function(data){   // data 就是服务器回传的 JSON 资料
-         $(that).closest(",panel").remove();
+         $(that).closest(".panel").remove();
        }
       })
     })
