--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,6 +13,11 @@
 
     <div class="text-right">
 
+      <span id="post-collect-<%= post.id %>">
+        <%= render :partial => "collect",  :locals => { :post => post } %>
+      </span>
+
+
       <span id="post-like-<%= post.id %>">
         <%= render :partial => "like", :locals => { :post => post } %>
      </span>
